--- a/package.json
+++ b/package.json
@@ -11,8 +11,10 @@
   "license": "ISC",
   "dependencies": {
     "@types/node": "^18.0.6",
+    "body-parser": "^1.20.2",
     "cors": "^2.8.5",
     "express": "^4.19.2",
+    "mongoose": "^8.3.1",
     "nodemon": "^3.1.0"
   }
 }
